@@ -1,5 +1,11 @@
 Changes with APR 0.9.4
 
+  *) apr_file_gets(): Return APR_SUCCESS if any characters are
+     returned.  Any I/O errors or EOF will be reported on the
+     next call.  Callers that are coded to expect returned 
+     data + APR_EOF when there is no final newline are affected 
+     by this change.  [Jeff Trawick]
+
   *) apr_proc_create() on Unix: Make the APR_SHELLCMD mode work
      when there is more than one program argument passed in.
      [Jeff Trawick]
